# MOTU

./: .gitignore  AICore.tsx  EnergyParticles.tsx  NeuralSphere.tsx  OrbitRing.tsx  README.md  SPRINT-REPORT-FE-002.md  SPRINT-REPORT-FE-003-Revision.md  SPRINT-REPORT-FE-003.md  START_BACKEND.bat  animations.css  package-lock.json  setup.sh
backend/: .env.example  isolate_ollama.py  motu_system.db  motu_system.db-shm  motu_system.db-wal  pyproject.toml  requirements.txt  run.py
backend/ai/: personality.md  system_prompt.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: chat.py  memory.py  voice.py
backend/app/core/: config.py
backend/app/db/: crud.py  database.py  models.py
backend/app/models/: chat.py  memory.py
backend/app/services/: ollama_client.py
backend/app/services/voice/: stt.py  tts.py  vad.py
backend/data/: motu.db
backend/src/: config.py  dependencies.py  main.py  motu.db  motu.db-shm  motu.db-wal  run.py
backend/src/database/: connection.py  session.py
backend/src/memory/: __init__.py  embedding.py  memory_manager.py  memory_models.py  memory_search.py  summarizer.py  vector_store.py
backend/src/models/: database.py  schemas.py
backend/src/repositories/: session_repository.py
backend/src/routers/: chat.py  memory.py  models.py  sessions.py  settings.py
backend/src/services/: chat_service.py  context_assembler.py  memory.py  memory_extractor.py  memory_manager.py  memory_searcher.py  ollama_client.py  session_service.py
backend/src/utils/: logger.py  validators.py
config/: .env.example
(+90 files in other folders)
